Several setPalette() related bugs have been tracked for the Qt library. https://bugreports.qt.io/browse/QTBUG-86501?jql=text%20~%20%22QApplication%20setPalette%22

A workaround is to call the method for every widget in the application when setting a new theme.